[gd_scene load_steps=37 format=3 uid="uid://bl0foop1gp2xr"]

[ext_resource type="Script" path="res://scenes/tutorial/scripts/codetutorial.gd" id="1_yatrg"]
[ext_resource type="PackedScene" uid="uid://cidaiixe327go" path="res://scenes/characters/player.tscn" id="2_bdtc3"]
[ext_resource type="Script" path="res://scenes/tutorial/scripts/tutorial_player_script.gd" id="3_a0oed"]
[ext_resource type="Texture2D" uid="uid://cklgjq0tyvewk" path="res://assets/scenario/background/codigofont_background2.png" id="4_3i76b"]
[ext_resource type="Texture2D" uid="uid://bav3thyva66lq" path="res://assets/props/Terminal.png" id="5_rmyi6"]
[ext_resource type="Texture2D" uid="uid://cxtfmbl6mxf51" path="res://assets/scenario/codigofont_ground.png" id="6_3n4ds"]
[ext_resource type="PackedScene" uid="uid://2j3byyhg36c6" path="res://scenes/codebox.tscn" id="7_1jylc"]
[ext_resource type="PackedScene" uid="uid://co1ntmvskmiex" path="res://scenes/textbox.tscn" id="8_n6ken"]
[ext_resource type="PackedScene" uid="uid://b86f2356r1et4" path="res://scenes/interact.tscn" id="9_vmyxb"]
[ext_resource type="Script" path="res://scenes/tutorial/scripts/door_bool.gd" id="10_lesad"]
[ext_resource type="Script" path="res://scenes/tutorial/scripts/Pit.gd" id="11_6ux6c"]
[ext_resource type="Script" path="res://scenes/tutorial/scripts/ponte_int.gd" id="13_cf24q"]
[ext_resource type="Script" path="res://scenes/tutorial/scripts/pit_colision.gd" id="13_n44au"]
[ext_resource type="Script" path="res://scenes/tutorial/scripts/extra_bridge.gd" id="14_5p0s1"]
[ext_resource type="Script" path="res://scenes/tutorial/scripts/stringdoor.gd" id="14_l37to"]
[ext_resource type="Texture2D" uid="uid://badxoq6an8yx3" path="res://assets/doors/porta_codigo_font_locked_v.png" id="15_7nabh"]
[ext_resource type="Script" path="res://scenes/tutorial/scripts/terminal.gd" id="15_vk38a"]
[ext_resource type="Texture2D" uid="uid://d32nrfo6br83o" path="res://assets/doors/porta_codigo_font_v.png" id="16_f41ty"]
[ext_resource type="PackedScene" uid="uid://dg16vehloexlr" path="res://scenes/event.tscn" id="16_y23sq"]
[ext_resource type="Script" path="res://scenes/tutorial/scripts/tutorial_event_1.gd" id="18_0begp"]
[ext_resource type="Texture2D" uid="uid://lbg631t0ld1j" path="res://assets/props/ponte_amarela.png" id="19_1b8x8"]
[ext_resource type="Script" path="res://scenes/tutorial/scripts/tutorial_event_2.gd" id="19_8ipdb"]
[ext_resource type="Script" path="res://scenes/tutorial/scripts/tutorial_event_3.gd" id="20_p2kd4"]
[ext_resource type="Script" path="res://scenes/tutorial/scripts/antipoo_door.gd" id="22_lgbbg"]
[ext_resource type="Texture2D" uid="uid://biqownj8nbjn0" path="res://assets/props/PortaAntiPoo.png" id="23_6e7rg"]
[ext_resource type="Texture2D" uid="uid://biac7gfadlqb1" path="res://assets/doors/porta_codigo_font_locked_h.png" id="31_yr2gk"]
[ext_resource type="Texture2D" uid="uid://cp31q27dx1cff" path="res://assets/doors/porta_codigo_font_h.png" id="32_jakl4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_axkge"]
atlas = ExtResource("15_7nabh")
region = Rect2(0, 0, 1008, 1776)

[sub_resource type="AtlasTexture" id="AtlasTexture_72syu"]
atlas = ExtResource("16_f41ty")
region = Rect2(0, 0, 1008, 1776)

[sub_resource type="SpriteFrames" id="SpriteFrames_djfo4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_axkge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72syu")
}],
"loop": true,
"name": &"aberto",
"speed": 0.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rp004"]
size = Vector2(15.3871, 47.8387)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3q0m"]
atlas = ExtResource("19_1b8x8")
region = Rect2(0, 0, 1136, 2248)

[sub_resource type="SpriteFrames" id="SpriteFrames_baql1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3q0m")
}],
"loop": true,
"name": &"end",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3q0m")
}],
"loop": true,
"name": &"middle",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"pit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3q0m")
}],
"loop": true,
"name": &"start",
"speed": 0.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_1k1lq"]
atlas = ExtResource("31_yr2gk")
region = Rect2(0, 0, 1578, 1416)

[sub_resource type="AtlasTexture" id="AtlasTexture_uv4kn"]
atlas = ExtResource("32_jakl4")
region = Rect2(0, 0, 1578, 1416)

[sub_resource type="SpriteFrames" id="SpriteFrames_sg14l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1k1lq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uv4kn")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="CodeTutorial" type="Node2D"]
script = ExtResource("1_yatrg")

[node name="Player" parent="." instance=ExtResource("2_bdtc3")]
z_index = 3
position = Vector2(-12575, 6356)
script = ExtResource("3_a0oed")

[node name="Camera2D" type="Camera2D" parent="Player"]
scale = Vector2(10.5263, 10.5263)
zoom = Vector2(0.15, 0.15)
limit_left = -14447
limit_top = 1336
limit_right = 7249
limit_bottom = 12171

[node name="Map" type="Node2D" parent="."]
position = Vector2(-45, 33)
scale = Vector2(28.99, 28.99)

[node name="Background" type="TextureRect" parent="Map"]
offset_left = -497.93
offset_top = 44.3601
offset_right = 9502.07
offset_bottom = 5044.36
scale = Vector2(0.075, 0.075)
texture = ExtResource("4_3i76b")

[node name="Terminal" type="TextureRect" parent="Map"]
z_index = 2
offset_left = -423.111
offset_top = 135.357
offset_right = 3524.89
offset_bottom = 2647.36
scale = Vector2(0.02, 0.02)
texture = ExtResource("5_rmyi6")

[node name="Ground" type="TextureRect" parent="Map"]
z_index = 1
offset_left = -494.066
offset_top = 157.606
offset_right = 14504.9
offset_bottom = 2987.61
scale = Vector2(0.05, 0.05)
texture = ExtResource("6_3n4ds")

[node name="Codebox" parent="." instance=ExtResource("7_1jylc")]

[node name="Textbox" parent="." instance=ExtResource("8_n6ken")]

[node name="PortaBool" parent="." instance=ExtResource("9_vmyxb")]
z_index = 4
position = Vector2(-2306, 6507)
scale = Vector2(0.65, 6.01)
script = ExtResource("10_lesad")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="PortaBool"]
z_index = 2
position = Vector2(-15.3846, -32.6123)
scale = Vector2(2.5638, 0.261014)
sprite_frames = SubResource("SpriteFrames_djfo4")
animation = &"aberto"

[node name="Pit" type="StaticBody2D" parent="."]
z_index = 2
position = Vector2(-125, 33)
script = ExtResource("11_6ux6c")

[node name="Colision1" type="CollisionShape2D" parent="Pit"]
position = Vector2(1706, 6540)
scale = Vector2(31, 31)
shape = SubResource("RectangleShape2D_rp004")
script = ExtResource("13_n44au")

[node name="Sprite" type="AnimatedSprite2D" parent="Pit/Colision1"]
position = Vector2(-0.0966797, 0.290039)
scale = Vector2(0.022, 0.023)
sprite_frames = SubResource("SpriteFrames_baql1")
animation = &"start"

[node name="Colision2" type="CollisionShape2D" parent="Pit"]
position = Vector2(2193, 6540)
scale = Vector2(31, 31)
shape = SubResource("RectangleShape2D_rp004")
script = ExtResource("13_n44au")

[node name="Sprite" type="AnimatedSprite2D" parent="Pit/Colision2"]
visible = false
position = Vector2(-0.0484009, 0.177399)
scale = Vector2(0.023, 0.023)
sprite_frames = SubResource("SpriteFrames_baql1")
animation = &"middle"
frame_progress = 0.836556

[node name="Colision3" type="CollisionShape2D" parent="Pit"]
position = Vector2(2678, 6540)
scale = Vector2(31, 31)
shape = SubResource("RectangleShape2D_rp004")
script = ExtResource("13_n44au")

[node name="Sprite" type="AnimatedSprite2D" parent="Pit/Colision3"]
visible = false
position = Vector2(-0.0484009, 0.177399)
scale = Vector2(0.023, 0.023)
sprite_frames = SubResource("SpriteFrames_baql1")
animation = &"middle"

[node name="Colision4" type="CollisionShape2D" parent="Pit"]
position = Vector2(3160, 6540)
scale = Vector2(31, 31)
shape = SubResource("RectangleShape2D_rp004")
script = ExtResource("13_n44au")

[node name="Sprite" type="AnimatedSprite2D" parent="Pit/Colision4"]
visible = false
position = Vector2(-0.0484009, 0.177399)
scale = Vector2(0.023, 0.023)
sprite_frames = SubResource("SpriteFrames_baql1")
animation = &"middle"

[node name="Colision5" type="CollisionShape2D" parent="Pit"]
position = Vector2(3641, 6540)
scale = Vector2(31, 31)
shape = SubResource("RectangleShape2D_rp004")
script = ExtResource("13_n44au")

[node name="Sprite" type="AnimatedSprite2D" parent="Pit/Colision5"]
visible = false
position = Vector2(-0.0484009, 0.177399)
scale = Vector2(0.023, 0.023)
sprite_frames = SubResource("SpriteFrames_baql1")
animation = &"end"

[node name="Colision6" type="CollisionShape2D" parent="Pit"]
position = Vector2(4117, 6540)
scale = Vector2(31, 31)
shape = SubResource("RectangleShape2D_rp004")
disabled = true
script = ExtResource("14_5p0s1")

[node name="Sprite" type="AnimatedSprite2D" parent="Pit/Colision6"]
visible = false
position = Vector2(-0.0484009, 0.177399)
scale = Vector2(0.023, 0.023)
sprite_frames = SubResource("SpriteFrames_baql1")
animation = &"end"

[node name="Colision7" type="CollisionShape2D" parent="Pit"]
position = Vector2(4597, 6540)
scale = Vector2(31, 31)
shape = SubResource("RectangleShape2D_rp004")
disabled = true
script = ExtResource("14_5p0s1")

[node name="Sprite" type="AnimatedSprite2D" parent="Pit/Colision7"]
visible = false
position = Vector2(-0.0484009, 0.177399)
scale = Vector2(0.023, 0.023)
sprite_frames = SubResource("SpriteFrames_baql1")
animation = &"end"

[node name="Colision8" type="CollisionShape2D" parent="Pit"]
position = Vector2(5072, 6540)
scale = Vector2(31, 31)
shape = SubResource("RectangleShape2D_rp004")
disabled = true
script = ExtResource("14_5p0s1")

[node name="Sprite" type="AnimatedSprite2D" parent="Pit/Colision8"]
visible = false
position = Vector2(-0.0484009, 0.177399)
scale = Vector2(0.023, 0.023)
sprite_frames = SubResource("SpriteFrames_baql1")
animation = &"end"

[node name="Colision9" type="CollisionShape2D" parent="Pit"]
position = Vector2(5552, 6540)
scale = Vector2(31, 31)
shape = SubResource("RectangleShape2D_rp004")
disabled = true
script = ExtResource("14_5p0s1")

[node name="Sprite" type="AnimatedSprite2D" parent="Pit/Colision9"]
visible = false
position = Vector2(-0.0484009, 0.177399)
scale = Vector2(0.023, 0.023)
sprite_frames = SubResource("SpriteFrames_baql1")
animation = &"end"

[node name="Colision10" type="CollisionShape2D" parent="Pit"]
position = Vector2(6037, 6540)
scale = Vector2(31, 31)
shape = SubResource("RectangleShape2D_rp004")
disabled = true
script = ExtResource("14_5p0s1")

[node name="Sprite" type="AnimatedSprite2D" parent="Pit/Colision10"]
visible = false
position = Vector2(-0.0484009, 0.177399)
scale = Vector2(0.023, 0.023)
sprite_frames = SubResource("SpriteFrames_baql1")
animation = &"end"

[node name="Colision11" type="CollisionShape2D" parent="Pit"]
position = Vector2(6517, 6540)
scale = Vector2(31, 31)
shape = SubResource("RectangleShape2D_rp004")
disabled = true
script = ExtResource("14_5p0s1")

[node name="Sprite" type="AnimatedSprite2D" parent="Pit/Colision11"]
visible = false
position = Vector2(-0.0484009, 0.177399)
scale = Vector2(0.023, 0.023)
sprite_frames = SubResource("SpriteFrames_baql1")
animation = &"end"

[node name="Colision12" type="CollisionShape2D" parent="Pit"]
position = Vector2(6992, 6540)
scale = Vector2(31, 31)
shape = SubResource("RectangleShape2D_rp004")
disabled = true
script = ExtResource("14_5p0s1")

[node name="Sprite" type="AnimatedSprite2D" parent="Pit/Colision12"]
visible = false
position = Vector2(-0.0484009, 0.177399)
scale = Vector2(0.023, 0.023)
sprite_frames = SubResource("SpriteFrames_baql1")
animation = &"end"

[node name="Colision13" type="CollisionShape2D" parent="Pit"]
position = Vector2(7472, 6540)
scale = Vector2(31, 31)
shape = SubResource("RectangleShape2D_rp004")
disabled = true
script = ExtResource("14_5p0s1")

[node name="Sprite" type="AnimatedSprite2D" parent="Pit/Colision13"]
visible = false
position = Vector2(-0.0484009, 0.177399)
scale = Vector2(0.023, 0.023)
sprite_frames = SubResource("SpriteFrames_baql1")
animation = &"end"

[node name="Colision14" type="CollisionShape2D" parent="Pit"]
position = Vector2(7953, 6540)
scale = Vector2(31, 31)
shape = SubResource("RectangleShape2D_rp004")
disabled = true
script = ExtResource("14_5p0s1")

[node name="Sprite" type="AnimatedSprite2D" parent="Pit/Colision14"]
visible = false
position = Vector2(-0.0484009, 0.177399)
scale = Vector2(0.023, 0.023)
sprite_frames = SubResource("SpriteFrames_baql1")
animation = &"end"

[node name="Colision15" type="CollisionShape2D" parent="Pit"]
position = Vector2(8428, 6540)
scale = Vector2(31, 31)
shape = SubResource("RectangleShape2D_rp004")
disabled = true
script = ExtResource("14_5p0s1")

[node name="Sprite" type="AnimatedSprite2D" parent="Pit/Colision15"]
visible = false
position = Vector2(-0.0484009, 0.177399)
scale = Vector2(0.023, 0.023)
sprite_frames = SubResource("SpriteFrames_baql1")
animation = &"end"

[node name="Colision16" type="CollisionShape2D" parent="Pit"]
position = Vector2(8908, 6540)
scale = Vector2(31, 31)
shape = SubResource("RectangleShape2D_rp004")
disabled = true
script = ExtResource("14_5p0s1")

[node name="Sprite" type="AnimatedSprite2D" parent="Pit/Colision16"]
visible = false
position = Vector2(-0.0484009, 0.177399)
scale = Vector2(0.023, 0.023)
sprite_frames = SubResource("SpriteFrames_baql1")
animation = &"end"

[node name="Colision17" type="CollisionShape2D" parent="Pit"]
position = Vector2(9393, 6540)
scale = Vector2(31, 31)
shape = SubResource("RectangleShape2D_rp004")
disabled = true
script = ExtResource("14_5p0s1")

[node name="Sprite" type="AnimatedSprite2D" parent="Pit/Colision17"]
visible = false
position = Vector2(-0.0484009, 0.177399)
scale = Vector2(0.023, 0.023)
sprite_frames = SubResource("SpriteFrames_baql1")
animation = &"end"

[node name="Colision18" type="CollisionShape2D" parent="Pit"]
position = Vector2(9873, 6540)
scale = Vector2(31, 31)
shape = SubResource("RectangleShape2D_rp004")
disabled = true
script = ExtResource("14_5p0s1")

[node name="Sprite" type="AnimatedSprite2D" parent="Pit/Colision18"]
visible = false
position = Vector2(-0.0484009, 0.177399)
scale = Vector2(0.023, 0.023)
sprite_frames = SubResource("SpriteFrames_baql1")
animation = &"end"

[node name="Colision19" type="CollisionShape2D" parent="Pit"]
position = Vector2(10348, 6540)
scale = Vector2(31, 31)
shape = SubResource("RectangleShape2D_rp004")
disabled = true
script = ExtResource("14_5p0s1")

[node name="Sprite" type="AnimatedSprite2D" parent="Pit/Colision19"]
visible = false
position = Vector2(-0.0484009, 0.177399)
scale = Vector2(0.023, 0.023)
sprite_frames = SubResource("SpriteFrames_baql1")
animation = &"end"

[node name="Colision20" type="CollisionShape2D" parent="Pit"]
position = Vector2(10828, 6540)
scale = Vector2(31, 31)
shape = SubResource("RectangleShape2D_rp004")
disabled = true
script = ExtResource("14_5p0s1")

[node name="Sprite" type="AnimatedSprite2D" parent="Pit/Colision20"]
visible = false
position = Vector2(-0.0484009, 0.177399)
scale = Vector2(0.023, 0.023)
sprite_frames = SubResource("SpriteFrames_baql1")
animation = &"end"

[node name="PonteInt" parent="." instance=ExtResource("9_vmyxb")]
z_index = 1
position = Vector2(1350, 6513)
script = ExtResource("13_cf24q")

[node name="PortaString" parent="." instance=ExtResource("9_vmyxb")]
z_index = 1
position = Vector2(5822, 4743)
script = ExtResource("14_l37to")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="PortaString"]
position = Vector2(604, -291)
scale = Vector2(0.93, 0.93)
sprite_frames = SubResource("SpriteFrames_sg14l")

[node name="Sprite" type="Sprite2D" parent="PortaString"]
texture = ExtResource("23_6e7rg")

[node name="Porta" parent="PortaString" instance=ExtResource("9_vmyxb")]
position = Vector2(615, 186)
scale = Vector2(1, 0.155039)
script = ExtResource("22_lgbbg")

[node name="Terminal" parent="." instance=ExtResource("9_vmyxb")]
z_index = 2
position = Vector2(-11177, 4673)
scale = Vector2(3.07, 1.835)
script = ExtResource("15_vk38a")

[node name="Event" parent="." instance=ExtResource("16_y23sq")]
position = Vector2(-5030, 6609)
scale = Vector2(1, 8)
script = ExtResource("18_0begp")

[node name="Event2" parent="." instance=ExtResource("16_y23sq")]
position = Vector2(-464, 6768)
scale = Vector2(1, 10)
script = ExtResource("19_8ipdb")

[node name="Event3" parent="." instance=ExtResource("16_y23sq")]
position = Vector2(5149, 6858)
scale = Vector2(1, 10)
script = ExtResource("20_p2kd4")

[node name="MapBorder" type="StaticBody2D" parent="."]
position = Vector2(-6471, 6757)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MapBorder"]
position = Vector2(23, 0)
polygon = PackedVector2Array(-7943, -5456, 13733, -5434, 13316, -1801, 9877, -1765, 9854, -939, 7755, -962, 7755, -1828, -7385, -1807, -7397, 1131, 7781, 1093, 7788, 571, 9895, 571, 9903, 1077, 13330, 1105, 13316, -1788, 13720, -5421, 13727, 5421, -8057, 5469, -8051, 5463)

[connection signal="code_closed" from="Codebox" to="PortaBool" method="_on_codebox_code_closed"]
[connection signal="code_closed" from="Codebox" to="PonteInt" method="_on_codebox_code_closed"]
[connection signal="code_closed" from="Codebox" to="PortaString" method="_on_codebox_code_closed"]
[connection signal="code_open" from="Codebox" to="PortaBool" method="_on_codebox_code_open"]
[connection signal="code_open" from="Codebox" to="PonteInt" method="_on_codebox_code_open"]
[connection signal="code_open" from="Codebox" to="PortaString" method="_on_codebox_code_open"]
[connection signal="text_finish" from="Textbox" to="Terminal" method="_on_textbox_text_finish"]
